--- a/car-services.html
+++ b/car-services.html
@@ -60,7 +60,7 @@
         <div class="view">
             <div class="w-full flex flex-col gap-1 md:gap-1">
                 <h2
-                    class="relative xl:text-[2.5rem] lg:-[2.3rem] md:text-[2rem] text-2xl lg:leading-[3.75rem] font-bold text-[#000000] ">
+                    class="relative  xl:text-[3.125rem] lg:-[3rem] md:text-[3rem] text-[1.75rem] lg:leading-[3.75rem] font-bold text-[#000000] ">
                     Tired of these?</h2>
                 <div class="bg-gradient-to-l from-[#CB122D]  to-[#650916] w-[7.375rem] w-20 h-3 -skew-x-[22deg]">
                 </div>
@@ -277,7 +277,7 @@
         <div class="view">
             <div class="w-full flex flex-col gap-1 md:gap-1">
                 <h2
-                    class="relative xl:text-[2.5rem] flex items-center  lg:-[2.3rem] md:text-[2rem] text-2xl lg:leading-[3.75rem] font-bold text-[#000000] ">
+                    class="relative  xl:text-[3.125rem] lg:-[3rem] md:text-[3rem] text-[1.75rem] flex items-center font-bold text-[#000000] ">
                     Here’s what your car gets
                     <span><img src="img/star_svg.webp" class="object-contain size-10" alt="" title=""></span>
                 </h2>
@@ -287,136 +287,145 @@
             <div class="w-full relative pt-12">
                 <div class="grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 gap-6">
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Air Filter Change"
                             title="Air Filter Change" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Air Filter Change
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="" title="Oil Filter Change"
                             width="371" height="334" class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Oil Filter Change
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt=""
                             title="Engine Oil Replacement" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Engine Oil Replacement
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt=""
                             title="Multi-Point Inspection" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Multi-Point Inspection
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt=""
                             title="Fuel Filter Replacement " width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Fuel Filter Replacement
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt=""
                             title="Cabin Filter Cleaning" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Cabin Filter Cleaning
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp"
                             alt="Parts Cleaning / Parts Replacement (if needed)"
                             title="Parts Cleaning / Parts Replacement (if needed)" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Parts Cleaning / Parts Replacement (if needed)
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Interior Vacuum "
                             title="Cleaning & Eco Wash" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Interior Vacuum Cleaning & Eco Wash
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                     <div
-                        class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
+                        class="w-full relative overflow-hidden group duration-500 md:h-[32.813rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
                         <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Door Lock & "
                             title="Hinges Lubrication" width="371" height="334"
                             class="size-full object-cover aspect-[371/334]">
                         <div class="absolute bottom-0 left-0 flex flex-col gap-y-3 duration-500 p-6">
-                            <h3 class="text-[#FFFFFF] text-2xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
+                            <h3
+                                class="text-[#FFFFFF] lg:text-3xl md:text-2xl text-xl font-bold duration-300 group-hover:lg:text-[#CB122D]">
                                 Door Lock &
                                 Hinges Lubrication
                             </h3>
-                            <p class="text-[#FFFFFF] opacity-75 text-base duration-500 
+                            <p class="text-[#FFFFFF] opacity-75 md:text-lg text-base duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
                             </p>
@@ -441,7 +450,7 @@
             <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 md:gap-12 gap-8 items-center">
                 <div class="flex flex-col gap-4">
                     <h2
-                        class="relative xl:text-[2.5rem] lg:-[2.3rem] md:text-[2rem] text-3xl leading-tight font-bold text-[#FFFFFF]">
+                        class="relative xl:text-[3.25rem] lg:-[3rem] md:text-[2.5rem] text-3xl leading-tight font-bold text-[#FFFFFF]">
                         Your car gets the service.
                         <span class="block">You get the savings.</span>
                     </h2>
@@ -460,7 +469,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="w-full">
+                <div class="w-full md:ps-12">
                     <img fetchpriority="low" loading="lazy" src="img/service_saving_banner.webp"
                         class="size-full object-contain aspect-[556/351]" width="556" height="351"
                         alt="Your car gets the service." title="Your car gets the service.">
@@ -473,7 +482,7 @@
         <div class="view md:!pr-0">
             <div class="w-full flex flex-col gap-1 md:gap-1">
                 <h2
-                    class="relative xl:text-[2.5rem] flex items-center  lg:-[2.3rem] md:text-[2rem] text-2xl lg:leading-[3.75rem] font-bold text-[#000000] ">
+                    class="relative xl:text-[3.125rem] lg:-[3rem] md:text-[3rem] text-[1.75rem] flex items-center lg:leading-[3.75rem] font-bold text-[#000000] ">
                     It's best you know these.
 
                 </h2>
