--- a/latest-offer.html
+++ b/latest-offer.html
@@ -17,13 +17,11 @@
 
 <body class="!font-inter">
 
-
-
-
     <div class="hero_section w-full relative z-0 md:h-[26.125rem] h-[13.188rem]">
         <div class="relative w-full h-full overflow-hidden">
             <img fetchpriority="high" decoding="async" loading="eager" src="img/service_hero.webp"
-                class="size-full object-cover" alt="Petromin Express, on the go." title="Petromin Express, on the go.">
+                class="size-full object-cover aspect-[1279/334]" width="1279" height="334"
+                alt="Petromin Express, on the go." title="Petromin Express, on the go.">
 
             <div
                 class="lg:w-[40.625rem] md:w-[32rem] w-[19.563rem] absolute lg:bottom-32 md:bottom-24 bottom-20 left-0 flex lg:py-8 py-3.5 lg:px-8 md:px-4 px-4 bg-[linear-gradient(268.6deg,_#CB122D_0.16%,_#650916_100%)]  origin-top -skew-x-[18deg]">
@@ -87,8 +85,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -123,8 +122,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -159,8 +159,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -195,8 +196,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -231,8 +233,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -267,8 +270,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -303,8 +307,9 @@
                             <a href="#" class="w-full block">
                                 <div
                                     class="w-full h-full bg-gradient-to-l from-[#CB122D] to-[#650916] p-2 relative overflow-hidden h-full group duration-500">
-                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" alt="car services"
-                                        title="car services" class="w-full h-full object-cover" />
+                                    <img fetchpriority="low" loading="lazy" src="img/image-39.webp" width="334"
+                                        height="334" alt="car services" title="car services"
+                                        class="w-full h-full object-cover aspect-square" />
                                     <div
                                         class="w-full flex md:flex-row flex-col md:justify-between justify-center items-center gap-2 py-4">
                                         <p class="text-white md:font-bold md:text-base text-sm max-sm:text-center">Lorem
@@ -358,9 +363,9 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 md:gap-x-6 md:gap-y-6 gap-y-6">
                     <div
                         class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
-                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Air Filter Change"
-                            title="Air Filter Change" width="371" height="334"
-                            class="size-full object-cover aspect-[371/334]">
+                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" width="304" height="334"
+                            alt="Air Filter Change" title="Air Filter Change"
+                            class="size-full object-cover aspect-[152/167]">
 
                         <div class=" absolute top-1 left-3 text-[7.563rem] md:text-[7.75rem] duration-300 font-extrabold text-[#ffffffa8] text-stroke
                                         drop-shadow-[2px_0_0_#ffffff40] 
@@ -382,9 +387,9 @@
                     </div>
                     <div
                         class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
-                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Air Filter Change"
-                            title="Air Filter Change" width="371" height="334"
-                            class="size-full object-cover aspect-[371/334]">
+                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" width="304" height="334"
+                            alt="Air Filter Change" title="Air Filter Change"
+                            class="size-full object-cover aspect-[152/167]">
 
                         <div class=" absolute top-1 left-3 text-[7.563rem] md:text-[7.75rem] duration-300 font-extrabold text-[#ffffffa8] text-stroke
                                         drop-shadow-[2px_0_0_#ffffff40] 
@@ -406,9 +411,9 @@
                     </div>
                     <div
                         class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
-                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Air Filter Change"
-                            title="Air Filter Change" width="371" height="334"
-                            class="size-full object-cover aspect-[371/334]">
+                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" width="304" height="334"
+                            alt="Air Filter Change" title="Air Filter Change"
+                            class="size-full object-cover aspect-[152/167]">
 
                         <div class=" absolute top-1 left-3 text-[7.563rem] md:text-[7.75rem] duration-300 font-extrabold text-[#ffffffa8] text-stroke
                                         drop-shadow-[2px_0_0_#ffffff40] 
@@ -430,9 +435,9 @@
                     </div>
                     <div
                         class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
-                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Air Filter Change"
-                            title="Air Filter Change" width="371" height="334"
-                            class="size-full object-cover aspect-[371/334]">
+                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" width="304" height="334"
+                            alt="Air Filter Change" title="Air Filter Change"
+                            class="size-full object-cover aspect-[152/167]">
 
                         <div class=" absolute top-1 left-3 text-[7.563rem] md:text-[7.75rem] duration-300 font-extrabold text-[#ffffffa8] text-stroke
                                         drop-shadow-[2px_0_0_#ffffff40] 
@@ -455,9 +460,9 @@
                     </div>
                     <div
                         class="w-full md:col-span-2 relative overflow-hidden group duration-500 md:h-[26.063rem] h-full before:absolute before:inset-0 before:bg-[#0000004a] before:w-full before:size-full before:lg:opacity-0 before:duration-500 hover:lg:before:opacity-100 hover:lg:-translate-y-2">
-                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" alt="Air Filter Change"
-                            title="Air Filter Change" width="371" height="334"
-                            class="size-full object-cover aspect-[371/334]">
+                        <img fetchpriority="low" loading="lazy" src="img/car_get.webp" width="304" height="334"
+                            alt="Air Filter Change" title="Air Filter Change"
+                            class="size-full object-cover aspect-[152/167]">
 
                         <div class=" absolute top-1 left-3 text-[7.563rem] md:text-[7.75rem] duration-300 font-extrabold text-[#ffffffa8] text-stroke
                                         drop-shadow-[2px_0_0_#ffffff40] 
@@ -536,7 +541,8 @@
             </div>
 
             <div class=" md:w-1/2 w-full ">
-                <img src="img/latest_carcare.webp" alt="" class="w-full h-full object-bottom object-contain">
+                <img fetchpriority="low" loading="lazy" src="img/latest_carcare.webp" width="608" height="573" alt=""
+                    class="w-full h-full object-bottom object-contain aspect-[608/573]">
             </div>
         </div>
         <div
